--- a/public/index.html
+++ b/public/index.html
@@ -2,272 +2,266 @@
 <html lang="ko">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Silent Coach</title>
 
-  <!-- PWA -->
-  <link rel="manifest" href="/manifest.json">
-  <meta name="theme-color" content="#0b1020">
-
-  <!-- (선택) iOS 설치 아이콘/스타일 -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <meta name="apple-mobile-web-app-title" content="SilentCoach">
+  <!-- ✅ PWA -->
+  <link rel="manifest" href="/manifest.json" />
+  <meta name="theme-color" content="#0b1020" />
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
   <style>
     :root{
-      --bg:#0b1020;
-      --panel: rgba(255,255,255,.06);
-      --panel2: rgba(255,255,255,.08);
-      --text:#e5e7eb;
-      --muted:#a7b0c0;
-      --line: rgba(255,255,255,.10);
-      --ok:#22c55e;
-      --warn:#f59e0b;
-      --danger:#ef4444;
-      --primary:#3b82f6;
+      --bg1:#0b1020;
+      --bg2:#020617;
+      --card: rgba(255,255,255,.06);
+      --card2: rgba(255,255,255,.08);
+      --border: rgba(255,255,255,.12);
+      --text: rgba(255,255,255,.92);
+      --muted: rgba(255,255,255,.65);
+      --blue: rgba(59,130,246,.35);
+      --red: rgba(239,68,68,.35);
+      --pill: rgba(255,255,255,.08);
+      --shadow: 0 12px 35px rgba(0,0,0,.35);
+      --radius: 22px;
     }
-
-    *{box-sizing:border-box}
-    html,body{height:100%}
+    *{ box-sizing:border-box; }
     body{
       margin:0;
-      font-family: system-ui,-apple-system,"Apple SD Gothic Neo","맑은 고딕",sans-serif;
-      background: radial-gradient(circle at top left, #11183a 0, var(--bg) 55%, #050814 100%);
+      font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Noto Sans KR", Arial, sans-serif;
       color:var(--text);
-      -webkit-font-smoothing: antialiased;
-      overflow-x:hidden;
+      background:
+        radial-gradient(900px 520px at 20% 15%, rgba(59,130,246,.20), transparent 55%),
+        radial-gradient(900px 520px at 80% 15%, rgba(239,68,68,.16), transparent 55%),
+        radial-gradient(1200px 700px at 50% 0%, rgba(255,255,255,.10), transparent 60%),
+        linear-gradient(180deg, var(--bg1), var(--bg2));
+      min-height:100vh;
+      padding: 26px 16px 40px;
     }
-
     .wrap{
       max-width: 980px;
       margin: 0 auto;
-      padding: 22px 16px 40px;
     }
-
-    h1{
-      margin: 0 0 12px;
-      font-size: clamp(28px, 5vw, 44px);
-      letter-spacing: .5px;
+    .title{
       text-align:center;
-      opacity:.95;
+      font-size: 42px;
+      letter-spacing:.4px;
+      margin: 10px 0 18px;
+      font-weight: 800;
+      text-shadow: 0 10px 35px rgba(0,0,0,.35);
     }
-
-    .toolbar{
+    .topRow{
       display:flex;
       gap:10px;
       flex-wrap:wrap;
-      align-items:center;
       justify-content:center;
-      margin: 12px 0 10px;
+      align-items:center;
+      margin-bottom: 12px;
     }
-
     .pill{
-      display:inline-flex;
+      padding: 10px 16px;
+      border: 1px solid var(--border);
+      background: var(--pill);
+      border-radius: 999px;
+      box-shadow: var(--shadow);
+      display:flex;
       align-items:center;
       gap:10px;
-      padding:10px 14px;
-      border: 1px solid var(--line);
-      background: var(--panel);
-      border-radius: 999px;
-      box-shadow: 0 10px 30px rgba(0,0,0,.25);
       user-select:none;
     }
-
     .dot{
-      width:10px;height:10px;border-radius:999px;
-      background: #64748b;
-      box-shadow: 0 0 0 0 rgba(34,197,94,0);
-      transition: .2s;
+      width:10px; height:10px;
+      border-radius: 999px;
+      background: rgba(255,255,255,.45);
+      box-shadow: 0 0 0 6px rgba(255,255,255,.06);
     }
-
-    /* 듣는 중 효과 */
     .listening .dot{
-      background: var(--ok);
-      animation: pulse 1.1s infinite;
-    }
-    @keyframes pulse{
-      0% { box-shadow: 0 0 0 0 rgba(34,197,94,.55); }
-      70% { box-shadow: 0 0 0 10px rgba(34,197,94,0); }
-      100% { box-shadow: 0 0 0 0 rgba(34,197,94,0); }
+      background: rgba(34,197,94,.95);
+      box-shadow: 0 0 0 8px rgba(34,197,94,.18);
     }
 
-    .btn{
-      border:0;
-      padding: 12px 16px;
-      border-radius: 14px;
-      background: var(--panel);
+    button{
+      border:1px solid var(--border);
+      background: rgba(255,255,255,.06);
       color: var(--text);
-      font-weight: 700;
+      border-radius: 16px;
+      padding: 12px 18px;
+      font-weight:700;
       cursor:pointer;
-      border: 1px solid var(--line);
-      box-shadow: 0 10px 30px rgba(0,0,0,.25);
-      transition: transform .05s ease, background .2s ease, border .2s ease;
+      box-shadow: var(--shadow);
       min-width: 92px;
     }
-    .btn:active{ transform: translateY(1px); }
-    .btn.primary{ background: rgba(59,130,246,.22); border-color: rgba(59,130,246,.35); }
-    .btn.danger{ background: rgba(239,68,68,.18); border-color: rgba(239,68,68,.35); }
-    .btn.ghost{ background: rgba(255,255,255,.03); }
-
-    .toggle{
-      display:inline-flex;
+    button:disabled{
+      opacity:.45;
+      cursor:not-allowed;
+    }
+    .btnBlue{ background: var(--blue); }
+    .btnRed{ background: var(--red); }
+    .checkWrap{
+      display:flex;
       align-items:center;
       gap:10px;
-      padding: 12px 14px;
-      border-radius: 14px;
-      background: var(--panel);
-      border:1px solid var(--line);
-      box-shadow: 0 10px 30px rgba(0,0,0,.25);
-      cursor:pointer;
-      user-select:none;
+      padding: 10px 14px;
+      border:1px solid var(--border);
+      background: rgba(255,255,255,.06);
+      border-radius: 16px;
+      box-shadow: var(--shadow);
+      font-weight:700;
     }
-    .toggle input{ width:18px;height:18px; }
+    .checkWrap input{ width:18px; height:18px; }
 
-    .help{
-      max-width: 720px;
-      margin: 0 auto 14px;
+    .desc{
+      max-width: 860px;
+      margin: 10px auto 18px;
       color: var(--muted);
-      font-size: 13px;
       line-height: 1.55;
+      font-size: 14px;
     }
-    .help ul{ margin: 10px 0 0; padding-left: 18px; }
-    .help li{ margin: 4px 0; }
 
     .grid{
       display:grid;
       grid-template-columns: 1fr 1fr;
-      gap: 12px;
-      margin-top: 14px;
+      gap: 14px;
+      margin-top: 10px;
     }
     @media (max-width: 860px){
+      .title{ font-size: 34px; }
       .grid{ grid-template-columns: 1fr; }
     }
 
     .card{
-      background: var(--panel);
-      border:1px solid var(--line);
-      border-radius: 18px;
-      padding: 14px 14px 12px;
-      box-shadow: 0 14px 40px rgba(0,0,0,.25);
-      backdrop-filter: blur(10px);
-      -webkit-backdrop-filter: blur(10px);
+      border:1px solid var(--border);
+      background: var(--card);
+      border-radius: var(--radius);
+      box-shadow: var(--shadow);
+      padding: 14px;
     }
-
-    .card h3{
-      margin:0 0 8px;
-      font-size: 14px;
-      color: var(--muted);
+    .cardHeader{
       display:flex;
       align-items:center;
-      gap:8px;
-      font-weight: 700;
-      letter-spacing:.2px;
-    }
-
-    .box{
-      width:100%;
-      min-height: 110px;
-      border-radius: 14px;
-      border:1px solid rgba(255,255,255,.08);
-      background: rgba(0,0,0,.18);
-      padding: 12px;
-      color: var(--text);
-      font-size: 18px;
-      line-height: 1.5;
-      outline:none;
-      resize: vertical;
-    }
-
-    .box.small{ min-height: 90px; font-size: 17px; }
-
-    .statusRow{
-      display:flex;
-      justify-content:space-between;
       gap:10px;
-      margin-top: 8px;
-      color: var(--muted);
-      font-size: 12px;
+      font-weight: 800;
+      margin-bottom: 10px;
     }
+    .emoji{
+      width: 28px;
+      height: 28px;
+      border-radius: 10px;
+      display:grid;
+      place-items:center;
+      background: rgba(255,255,255,.08);
+      border:1px solid rgba(255,255,255,.10);
+    }
+    textarea{
+      width:100%;
+      min-height: 160px;
+      resize: vertical;
+      border-radius: 16px;
+      border:1px solid rgba(255,255,255,.12);
+      background: rgba(0,0,0,.18);
+      color: var(--text);
+      padding: 14px;
+      outline:none;
+      font-size: 15px;
+      line-height: 1.55;
+    }
+    textarea::placeholder{ color: rgba(255,255,255,.35); }
 
+    .badges{
+      display:flex;
+      justify-content: space-between;
+      gap: 10px;
+      flex-wrap:wrap;
+      margin-top: 10px;
+    }
     .badge{
-      display:inline-flex;
-      align-items:center;
-      gap:6px;
-      padding: 6px 10px;
+      padding: 8px 12px;
       border-radius: 999px;
-      border:1px solid var(--line);
-      background: rgba(255,255,255,.03);
-      font-weight: 700;
-      white-space:nowrap;
+      border:1px solid rgba(255,255,255,.10);
+      background: rgba(255,255,255,.06);
+      color: rgba(255,255,255,.75);
+      font-size: 13px;
+      font-weight:700;
     }
 
-    .footer{
+    .wide{
+      margin-top: 14px;
+    }
+    .footerHint{
       text-align:center;
-      margin-top: 16px;
-      color: rgba(167,176,192,.75);
-      font-size: 12px;
+      color: rgba(255,255,255,.45);
+      font-size: 12.5px;
+      margin-top: 14px;
     }
-
-    .hidden{ display:none !important; }
   </style>
 </head>
 
 <body>
   <div class="wrap" id="appRoot">
-    <h1>Silent Coach</h1>
+    <div class="title">Silent Coach</div>
 
-    <div class="toolbar">
-      <div class="pill" id="listenPill" aria-live="polite">
-        <span class="dot"></span>
-        <span id="listenText">대기 중…</span>
+    <div class="topRow">
+      <div class="pill" id="listenPill">
+        <div class="dot"></div>
+        <div id="listenText">대기 중…</div>
       </div>
 
-      <button class="btn primary" id="btnStart">Start</button>
-      <button class="btn danger" id="btnStop" disabled>Stop</button>
-      <button class="btn ghost" id="btnClear">Clear</button>
+      <button class="btnBlue" id="btnStart">Start</button>
+      <button class="btnRed"  id="btnStop" disabled>Stop</button>
+      <button id="btnClear">Clear</button>
 
-      <label class="toggle" title="AI 코칭을 켜면 말이 끝난 후 자동으로 코칭을 생성합니다.">
+      <label class="checkWrap">
         <input type="checkbox" id="toggleAI" checked />
-        <span>AI 코치 ON</span>
+        AI 코치 ON
       </label>
     </div>
 
-    <div class="help">
-      <ul>
-        <li>말하는 동안 즉시 자막(interim) 표시</li>
-        <li>말이 끝나면 최종 전사(final) 누적</li>
-        <li>최종 전사가 연속으로 들어와도 AI는 디바운스로 1회만 호출</li>
-      </ul>
+    <div class="desc">
+      • 말하는 동안 즉시 자막(interim) 표시<br/>
+      • 말이 끝나면 최종 전사(final) 누적<br/>
+      • 최종 전사가 연속으로 들어와도 AI는 디바운스로 1회만 호출
     </div>
 
     <div class="grid">
       <div class="card">
-        <h3>🎙️ 실시간 전사 (interim)</h3>
-        <textarea class="box small" id="interimBox" placeholder="여기에 말한 내용이 실시간으로 표시됩니다..." readonly></textarea>
-        <div class="statusRow">
-          <span class="badge" id="micBadge">마이크: 준비</span>
-          <span class="badge" id="srBadge">인식: 준비</span>
+        <div class="cardHeader">
+          <div class="emoji">🎙️</div>
+          <div>실시간 전사 (interim)</div>
+        </div>
+        <textarea id="interimBox" placeholder="여기에 말한 내용이 실시간으로 표시됩니다..."></textarea>
+
+        <div class="badges">
+          <div class="badge" id="micBadge">마이크: 준비</div>
+          <div class="badge" id="srBadge">인식: 준비</div>
         </div>
       </div>
 
       <div class="card">
-        <h3>🧠 코치 답변 (텍스트)</h3>
-        <textarea class="box small" id="coachBox" placeholder="AI 코치가 켜져 있으면 여기에 답변이 표시됩니다..." readonly></textarea>
-        <div class="statusRow">
-          <span class="badge" id="toneBadge">tone: calm</span>
-          <span class="badge" id="lenBadge">length: medium</span>
+        <div class="cardHeader">
+          <div class="emoji">🧠</div>
+          <div>코치 답변 (텍스트)</div>
         </div>
-      </div>
+        <textarea id="coachBox" placeholder="AI 코치가 켜져 있으면 여기에 답변이 표시됩니다..."></textarea>
 
-      <div class="card" style="grid-column:1/-1">
-        <h3>✅ 최종 전사 (최근 N줄)</h3>
-        <textarea class="box" id="finalBox" placeholder="최종 확정된 문장이 여기에 쌓입니다..." readonly></textarea>
+        <div class="badges">
+          <div class="badge" id="toneBadge">tone: calm</div>
+          <div class="badge" id="lenBadge">length: medium</div>
+        </div>
       </div>
     </div>
 
-    <div class="footer">
-      홈화면에 추가가 안 보이면: 모바일 Chrome에서 ⋮ → “홈 화면에 추가”
+    <div class="card wide">
+      <div class="cardHeader">
+        <div class="emoji">✅</div>
+        <div>최종 전사 (최근 N줄)</div>
+      </div>
+      <textarea id="finalBox" placeholder="최종 확정된 문장이 여기에 쌓입니다..."></textarea>
+    </div>
+
+    <div class="footerHint">
+      홈화면에 추가가 안 보이면: 모바일 Chrome 메뉴(⋮) → “홈 화면에 추가”
     </div>
   </div>
 
@@ -280,12 +274,9 @@ if ("serviceWorker" in navigator) {
 }
 
 /* ---------------------------
-  음성 인식 (Web Speech API)
-  - 페이지 로드시 마이크 요청하지 않음
-  - Start 버튼 누를 때만 시작
+  DOM
 ---------------------------- */
 const root = document.getElementById("appRoot");
-const listenPill = document.getElementById("listenPill");
 const listenText = document.getElementById("listenText");
 
 const btnStart = document.getElementById("btnStart");
@@ -303,12 +294,17 @@ const srBadge  = document.getElementById("srBadge");
 const toneBadge = document.getElementById("toneBadge");
 const lenBadge  = document.getElementById("lenBadge");
 
-// 옵션(원하면 UI로 나중에 바꿀 수 있음)
+/* ---------------------------
+  옵션
+---------------------------- */
 let tone = localStorage.getItem("sc_tone") || "calm";
 let length = localStorage.getItem("sc_length") || "medium";
 toneBadge.textContent = "tone: " + tone;
 lenBadge.textContent = "length: " + length;
 
+/* ---------------------------
+  상태
+---------------------------- */
 let running = false;
 let finalLines = [];
 const MAX_LINES = 12;
@@ -317,9 +313,9 @@ const MAX_LINES = 12;
 let aiTimer = null;
 const AI_DEBOUNCE_MS = 700;
 
-// 마이크 스트림(Stop 시 종료용)
-let micStream = null;
-
+/* ---------------------------
+  UI helpers
+---------------------------- */
 function setListening(on){
   if(on){
     root.classList.add("listening");
@@ -348,7 +344,13 @@ function clearAll(){
   coachBox.value = "";
 }
 
-// SpeechRecognition 준비
+/* ---------------------------
+  SpeechRecognition (모바일 안정 버전)
+  ✅ 핵심 수정
+  - continuous = false
+  - onend 자동 재시작 제거
+  - getUserMedia() 사용 안 함 (충돌 방지)
+---------------------------- */
 const SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
 let recog = null;
 
@@ -356,7 +358,14 @@ function buildRecognizer(){
   const r = new SpeechRecognition();
   r.lang = "ko-KR";
   r.interimResults = true;
-  r.continuous = true;
+
+  // ✅ 모바일에서 continuous는 불안정 -> 끄기
+  r.continuous = false;
+
+  r.onstart = () => {
+    srBadge.textContent = "인식: 진행중";
+    micBadge.textContent = "마이크: 사용중";
+  };
 
   r.onresult = (event) => {
     let interim = "";
@@ -379,41 +388,34 @@ function buildRecognizer(){
   r.onerror = (e) => {
     srBadge.textContent = "인식: 오류";
     console.log("Speech error:", e);
+    // 모바일에서 흔한 에러 힌트
+    if (e && e.error === "not-allowed") {
+      alert("마이크 권한이 차단되어 있어요. 주소창 자물쇠 → 권한 → 마이크 허용 후 새로고침!");
+    }
   };
 
+  // ✅ 자동 재시작(모바일에서 망가짐) 제거
   r.onend = () => {
-    // running 상태인데 중간에 끊기면 자동 재시작(모바일은 상황에 따라 끊길 수 있음)
+    srBadge.textContent = "인식: 종료됨";
+    micBadge.textContent = "마이크: 준비";
+    setListening(false);
+
+    // 사용자가 계속 듣기 원하면, 'Start'를 다시 누르게 유도 (가장 안정)
     if (running) {
-      try { r.start(); } catch {}
+      running = false;
+      btnStart.disabled = false;
+      btnStop.disabled = true;
     }
   };
 
   return r;
 }
 
-async function ensureMicOnce(){
-  // “Start” 누를 때만 마이크 권한을 요청하도록 함
-  try{
-    micStream = await navigator.mediaDevices.getUserMedia({ audio: true });
-    micBadge.textContent = "마이크: 허용됨";
-  }catch(e){
-    micBadge.textContent = "마이크: 차단됨";
-    throw e;
-  }
-}
-
 async function start(){
   if (running) return;
+
   if (!SpeechRecognition) {
     alert("이 브라우저는 음성 인식을 지원하지 않습니다. (Chrome 권장)");
-    return;
-  }
-
-  // ✅ 사용자 제스처(Start 클릭)에서만 권한 요청 → 팝업 반복 감소에 도움
-  try{
-    await ensureMicOnce();
-  }catch(e){
-    alert("마이크 권한이 필요합니다. 브라우저 설정에서 마이크 허용 후 다시 시도해주세요.");
     return;
   }
 
@@ -423,7 +425,17 @@ async function start(){
   setListening(true);
 
   recog = buildRecognizer();
-  try { recog.start(); } catch {}
+
+  try {
+    recog.start();
+  } catch (e) {
+    console.log(e);
+    running = false;
+    btnStart.disabled = false;
+    btnStop.disabled = true;
+    setListening(false);
+    alert("음성인식을 시작하지 못했어요. 새로고침 후 다시 Start를 눌러주세요.");
+  }
 }
 
 function stop(){
@@ -435,12 +447,6 @@ function stop(){
   try{
     if(recog) recog.stop();
   }catch{}
-
-  // 마이크 트랙 종료(불필요한 점유 방지)
-  if(micStream){
-    micStream.getTracks().forEach(t => t.stop());
-    micStream = null;
-  }
 
   interimBox.value = "";
 }
@@ -468,7 +474,9 @@ async function callCoach(){
       headers:{ "Content-Type":"application/json" },
       body: JSON.stringify({ text, tone, length })
     });
+
     const data = await res.json();
+
     if(!data.ok){
       coachBox.value = "오류: " + (data.error || "unknown");
       return;
