--- a/public/index.html
+++ b/public/index.html
@@ -2,508 +2,142 @@
 <html lang="ko">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Silent Coach</title>
 
-  <!-- ✅ PWA -->
+  <!-- PWA -->
   <link rel="manifest" href="/manifest.json" />
   <meta name="theme-color" content="#0b1020" />
-  <meta name="mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
   <style>
-    :root{
-      --bg1:#0b1020;
-      --bg2:#020617;
-      --card: rgba(255,255,255,.06);
-      --card2: rgba(255,255,255,.08);
-      --border: rgba(255,255,255,.12);
-      --text: rgba(255,255,255,.92);
-      --muted: rgba(255,255,255,.65);
-      --blue: rgba(59,130,246,.35);
-      --red: rgba(239,68,68,.35);
-      --pill: rgba(255,255,255,.08);
-      --shadow: 0 12px 35px rgba(0,0,0,.35);
-      --radius: 22px;
-    }
-    *{ box-sizing:border-box; }
-    body{
-      margin:0;
-      font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Noto Sans KR", Arial, sans-serif;
-      color:var(--text);
-      background:
-        radial-gradient(900px 520px at 20% 15%, rgba(59,130,246,.20), transparent 55%),
-        radial-gradient(900px 520px at 80% 15%, rgba(239,68,68,.16), transparent 55%),
-        radial-gradient(1200px 700px at 50% 0%, rgba(255,255,255,.10), transparent 60%),
-        linear-gradient(180deg, var(--bg1), var(--bg2));
-      min-height:100vh;
-      padding: 26px 16px 40px;
-    }
-    .wrap{
-      max-width: 980px;
-      margin: 0 auto;
-    }
-    .title{
-      text-align:center;
-      font-size: 42px;
-      letter-spacing:.4px;
-      margin: 10px 0 18px;
-      font-weight: 800;
-      text-shadow: 0 10px 35px rgba(0,0,0,.35);
-    }
-    .topRow{
-      display:flex;
-      gap:10px;
-      flex-wrap:wrap;
-      justify-content:center;
-      align-items:center;
-      margin-bottom: 12px;
-    }
-    .pill{
-      padding: 10px 16px;
-      border: 1px solid var(--border);
-      background: var(--pill);
-      border-radius: 999px;
-      box-shadow: var(--shadow);
-      display:flex;
-      align-items:center;
-      gap:10px;
-      user-select:none;
-    }
-    .dot{
-      width:10px; height:10px;
-      border-radius: 999px;
-      background: rgba(255,255,255,.45);
-      box-shadow: 0 0 0 6px rgba(255,255,255,.06);
-    }
-    .listening .dot{
-      background: rgba(34,197,94,.95);
-      box-shadow: 0 0 0 8px rgba(34,197,94,.18);
+    body {
+      margin: 0;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI";
+      background: radial-gradient(circle at top left, #1e293b, #020617);
+      color: #e5e7eb;
+      text-align: center;
     }
 
-    button{
-      border:1px solid var(--border);
-      background: rgba(255,255,255,.06);
-      color: var(--text);
-      border-radius: 16px;
-      padding: 12px 18px;
-      font-weight:700;
-      cursor:pointer;
-      box-shadow: var(--shadow);
-      min-width: 92px;
-    }
-    button:disabled{
-      opacity:.45;
-      cursor:not-allowed;
-    }
-    .btnBlue{ background: var(--blue); }
-    .btnRed{ background: var(--red); }
-    .checkWrap{
-      display:flex;
-      align-items:center;
-      gap:10px;
-      padding: 10px 14px;
-      border:1px solid var(--border);
-      background: rgba(255,255,255,.06);
-      border-radius: 16px;
-      box-shadow: var(--shadow);
-      font-weight:700;
-    }
-    .checkWrap input{ width:18px; height:18px; }
+    h1 { margin-top: 24px; }
 
-    .desc{
-      max-width: 860px;
-      margin: 10px auto 18px;
-      color: var(--muted);
-      line-height: 1.55;
-      font-size: 14px;
+    button {
+      padding: 14px 22px;
+      margin: 8px;
+      font-size: 16px;
+      border-radius: 12px;
+      border: none;
+      cursor: pointer;
     }
 
-    .grid{
-      display:grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 14px;
-      margin-top: 10px;
-    }
-    @media (max-width: 860px){
-      .title{ font-size: 34px; }
-      .grid{ grid-template-columns: 1fr; }
-    }
+    #startBtn { background: #2563eb; color: #fff; }
+    #stopBtn { background: #7c2d12; color: #fff; }
 
-    .card{
-      border:1px solid var(--border);
-      background: var(--card);
-      border-radius: var(--radius);
-      box-shadow: var(--shadow);
-      padding: 14px;
-    }
-    .cardHeader{
-      display:flex;
-      align-items:center;
-      gap:10px;
-      font-weight: 800;
-      margin-bottom: 10px;
-    }
-    .emoji{
-      width: 28px;
-      height: 28px;
+    textarea {
+      width: 90%;
+      height: 140px;
+      margin-top: 12px;
+      padding: 12px;
       border-radius: 10px;
-      display:grid;
-      place-items:center;
-      background: rgba(255,255,255,.08);
-      border:1px solid rgba(255,255,255,.10);
-    }
-    textarea{
-      width:100%;
-      min-height: 160px;
-      resize: vertical;
-      border-radius: 16px;
-      border:1px solid rgba(255,255,255,.12);
-      background: rgba(0,0,0,.18);
-      color: var(--text);
-      padding: 14px;
-      outline:none;
+      border: none;
+      background: rgba(255,255,255,0.05);
+      color: #e5e7eb;
       font-size: 15px;
-      line-height: 1.55;
     }
-    textarea::placeholder{ color: rgba(255,255,255,.35); }
 
-    .badges{
-      display:flex;
-      justify-content: space-between;
-      gap: 10px;
-      flex-wrap:wrap;
+    .status {
       margin-top: 10px;
-    }
-    .badge{
-      padding: 8px 12px;
-      border-radius: 999px;
-      border:1px solid rgba(255,255,255,.10);
-      background: rgba(255,255,255,.06);
-      color: rgba(255,255,255,.75);
-      font-size: 13px;
-      font-weight:700;
-    }
-
-    .wide{
-      margin-top: 14px;
-    }
-    .footerHint{
-      text-align:center;
-      color: rgba(255,255,255,.45);
-      font-size: 12.5px;
-      margin-top: 14px;
+      opacity: 0.8;
+      font-size: 14px;
     }
   </style>
 </head>
-
 <body>
-  <div class="wrap" id="appRoot">
-    <div class="title">Silent Coach</div>
 
-    <div class="topRow">
-      <div class="pill" id="listenPill">
-        <div class="dot"></div>
-        <div id="listenText">대기 중…</div>
-      </div>
+  <h1>Silent Coach</h1>
 
-      <button class="btnBlue" id="btnStart">Start</button>
-      <button class="btnRed"  id="btnStop" disabled>Stop</button>
-      <button id="btnClear">Clear</button>
+  <button id="startBtn">🎤 Start</button>
+  <button id="stopBtn">⛔ Stop</button>
 
-      <label class="checkWrap">
-        <input type="checkbox" id="toggleAI" checked />
-        AI 코치 ON
-      </label>
-    </div>
+  <div class="status" id="status">대기 중...</div>
 
-    <div class="desc">
-      • 말하는 동안 즉시 자막(interim) 표시<br/>
-      • 말이 끝나면 최종 전사(final) 누적<br/>
-      • 최종 전사가 연속으로 들어와도 AI는 디바운스로 1회만 호출
-    </div>
-
-    <div class="grid">
-      <div class="card">
-        <div class="cardHeader">
-          <div class="emoji">🎙️</div>
-          <div>실시간 전사 (interim)</div>
-        </div>
-        <textarea id="interimBox" placeholder="여기에 말한 내용이 실시간으로 표시됩니다..."></textarea>
-
-        <div class="badges">
-          <div class="badge" id="micBadge">마이크: 준비</div>
-          <div class="badge" id="srBadge">인식: 준비</div>
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="cardHeader">
-          <div class="emoji">🧠</div>
-          <div>코치 답변 (텍스트)</div>
-        </div>
-        <textarea id="coachBox" placeholder="AI 코치가 켜져 있으면 여기에 답변이 표시됩니다..."></textarea>
-
-        <div class="badges">
-          <div class="badge" id="toneBadge">tone: calm</div>
-          <div class="badge" id="lenBadge">length: medium</div>
-        </div>
-      </div>
-    </div>
-
-    <div class="card wide">
-      <div class="cardHeader">
-        <div class="emoji">✅</div>
-        <div>최종 전사 (최근 N줄)</div>
-      </div>
-      <textarea id="finalBox" placeholder="최종 확정된 문장이 여기에 쌓입니다..."></textarea>
-    </div>
-
-    <div class="footerHint">
-      홈화면에 추가가 안 보이면: 모바일 Chrome 메뉴(⋮) → “홈 화면에 추가”
-    </div>
-  </div>
+  <textarea id="interim" placeholder="실시간 전사 (interim)"></textarea>
+  <textarea id="final" placeholder="최종 전사 (final)"></textarea>
 
 <script>
-/* ---------------------------
-  PWA: 서비스워커 등록
----------------------------- */
-if ("serviceWorker" in navigator) {
-  navigator.serviceWorker.register("/sw.js").catch(()=>{});
-}
-
-/* ---------------------------
-  DOM
----------------------------- */
-const root = document.getElementById("appRoot");
-const listenText = document.getElementById("listenText");
-
-const btnStart = document.getElementById("btnStart");
-const btnStop  = document.getElementById("btnStop");
-const btnClear = document.getElementById("btnClear");
-
-const toggleAI = document.getElementById("toggleAI");
-
-const interimBox = document.getElementById("interimBox");
-const finalBox   = document.getElementById("finalBox");
-const coachBox   = document.getElementById("coachBox");
-
-const micBadge = document.getElementById("micBadge");
-const srBadge  = document.getElementById("srBadge");
-const toneBadge = document.getElementById("toneBadge");
-const lenBadge  = document.getElementById("lenBadge");
-
-/* ---------------------------
-  옵션
----------------------------- */
-let tone = localStorage.getItem("sc_tone") || "calm";
-let length = localStorage.getItem("sc_length") || "medium";
-toneBadge.textContent = "tone: " + tone;
-lenBadge.textContent = "length: " + length;
-
-/* ---------------------------
-  상태
----------------------------- */
-let running = false;
-let finalLines = [];
-const MAX_LINES = 12;
-
-// AI 호출 디바운스
-let aiTimer = null;
-const AI_DEBOUNCE_MS = 700;
-
-/* ---------------------------
-  UI helpers
----------------------------- */
-function setListening(on){
-  if(on){
-    root.classList.add("listening");
-    listenText.textContent = "듣는 중…";
-    micBadge.textContent = "마이크: 사용중";
-    srBadge.textContent  = "인식: 진행중";
-  }else{
-    root.classList.remove("listening");
-    listenText.textContent = "대기 중…";
-    micBadge.textContent = "마이크: 준비";
-    srBadge.textContent  = "인식: 준비";
-  }
-}
-
-function pushFinalLine(line){
-  if(!line) return;
-  finalLines.push(line);
-  if(finalLines.length > MAX_LINES) finalLines.shift();
-  finalBox.value = finalLines.join("\n");
-}
-
-function clearAll(){
-  interimBox.value = "";
-  finalLines = [];
-  finalBox.value = "";
-  coachBox.value = "";
-}
-
-/* ---------------------------
-  SpeechRecognition (모바일 안정 버전)
-  ✅ 핵심 수정
-  - continuous = false
-  - onend 자동 재시작 제거
-  - getUserMedia() 사용 안 함 (충돌 방지)
----------------------------- */
-const SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
-let recog = null;
-
-function buildRecognizer(){
-  const r = new SpeechRecognition();
-  r.lang = "ko-KR";
-  r.interimResults = true;
-
-  // ✅ 모바일에서 continuous는 불안정 -> 끄기
-  r.continuous = false;
-
-  r.onstart = () => {
-    srBadge.textContent = "인식: 진행중";
-    micBadge.textContent = "마이크: 사용중";
-  };
-
-  r.onresult = (event) => {
-    let interim = "";
-    for (let i = event.resultIndex; i < event.results.length; i++) {
-      const res = event.results[i];
-      const txt = (res[0] && res[0].transcript) ? res[0].transcript : "";
-      if (res.isFinal) {
-        const cleaned = txt.trim();
-        if (cleaned) {
-          pushFinalLine(cleaned);
-          if (toggleAI.checked) scheduleCoach();
-        }
-      } else {
-        interim += txt;
-      }
-    }
-    interimBox.value = interim.trim();
-  };
-
-  r.onerror = (e) => {
-    srBadge.textContent = "인식: 오류";
-    console.log("Speech error:", e);
-    // 모바일에서 흔한 에러 힌트
-    if (e && e.error === "not-allowed") {
-      alert("마이크 권한이 차단되어 있어요. 주소창 자물쇠 → 권한 → 마이크 허용 후 새로고침!");
-    }
-  };
-
-  // ✅ 자동 재시작(모바일에서 망가짐) 제거
-  r.onend = () => {
-    srBadge.textContent = "인식: 종료됨";
-    micBadge.textContent = "마이크: 준비";
-    setListening(false);
-
-    // 사용자가 계속 듣기 원하면, 'Start'를 다시 누르게 유도 (가장 안정)
-    if (running) {
-      running = false;
-      btnStart.disabled = false;
-      btnStop.disabled = true;
-    }
-  };
-
-  return r;
-}
-
-async function start(){
-  if (running) return;
+(() => {
+  const SpeechRecognition =
+    window.SpeechRecognition || window.webkitSpeechRecognition;
 
   if (!SpeechRecognition) {
-    alert("이 브라우저는 음성 인식을 지원하지 않습니다. (Chrome 권장)");
+    alert("이 브라우저는 음성 인식을 지원하지 않습니다 (Chrome 사용 권장)");
     return;
   }
 
-  running = true;
-  btnStart.disabled = true;
-  btnStop.disabled = false;
-  setListening(true);
+  let recognition = null;
+  let recognizing = false;
 
-  recog = buildRecognizer();
+  const startBtn = document.getElementById("startBtn");
+  const stopBtn  = document.getElementById("stopBtn");
+  const statusEl = document.getElementById("status");
+  const interimEl = document.getElementById("interim");
+  const finalEl = document.getElementById("final");
 
-  try {
-    recog.start();
-  } catch (e) {
-    console.log(e);
-    running = false;
-    btnStart.disabled = false;
-    btnStop.disabled = true;
-    setListening(false);
-    alert("음성인식을 시작하지 못했어요. 새로고침 후 다시 Start를 눌러주세요.");
+  function createRecognition() {
+    recognition = new SpeechRecognition();
+    recognition.lang = "ko-KR";
+    recognition.continuous = true;
+    recognition.interimResults = true;
+
+    recognition.onstart = () => {
+      recognizing = true;
+      statusEl.textContent = "🎙️ 듣는 중...";
+    };
+
+    recognition.onend = () => {
+      recognizing = false;
+      statusEl.textContent = "⏸️ 중지됨";
+    };
+
+    recognition.onerror = (e) => {
+      console.error(e);
+      statusEl.textContent = "⚠️ 오류 발생";
+    };
+
+    recognition.onresult = (event) => {
+      let interim = "";
+      let finalText = "";
+
+      for (let i = event.resultIndex; i < event.results.length; i++) {
+        const txt = event.results[i][0].transcript;
+        if (event.results[i].isFinal) {
+          finalText += txt + " ";
+        } else {
+          interim += txt;
+        }
+      }
+
+      interimEl.value = interim;
+      if (finalText) {
+        finalEl.value += finalText;
+      }
+    };
   }
-}
 
-function stop(){
-  running = false;
-  btnStart.disabled = false;
-  btnStop.disabled = true;
-  setListening(false);
+  // ⭐ 모바일 핵심 포인트
+  // 반드시 "버튼 클릭 이벤트 안에서" start() 실행
+  startBtn.addEventListener("click", () => {
+    if (recognizing) return;
 
-  try{
-    if(recog) recog.stop();
-  }catch{}
+    createRecognition();     // 새 객체 생성
+    recognition.start();     // 즉시 실행 (비동기/타이머 ❌)
+  });
 
-  interimBox.value = "";
-}
-
-btnStart.addEventListener("click", start);
-btnStop.addEventListener("click", stop);
-btnClear.addEventListener("click", clearAll);
-
-/* ---------------------------
-  AI 코치 호출
----------------------------- */
-function scheduleCoach(){
-  if(aiTimer) clearTimeout(aiTimer);
-  aiTimer = setTimeout(() => callCoach(), AI_DEBOUNCE_MS);
-}
-
-async function callCoach(){
-  const text = finalLines.join("\n").trim();
-  if(!text) return;
-
-  coachBox.value = "코칭 생성 중…";
-  try{
-    const res = await fetch("/api/coach", {
-      method:"POST",
-      headers:{ "Content-Type":"application/json" },
-      body: JSON.stringify({ text, tone, length })
-    });
-
-    const data = await res.json();
-
-    if(!data.ok){
-      coachBox.value = "오류: " + (data.error || "unknown");
-      return;
+  stopBtn.addEventListener("click", () => {
+    if (recognition && recognizing) {
+      recognition.stop();
     }
-
-    const c = data.coach;
-    const out =
-`[요약]
-- ${c.summary}
-
-[통찰]
-- ${c.insight || ""}
-
-[다음 행동 3개]
-- 1) ${c.actions?.[0] || ""}
-- 2) ${c.actions?.[1] || ""}
-- 3) ${c.actions?.[2] || ""}
-
-[한 줄]
-- ${c.one_liner || ""}`;
-
-    coachBox.value = out.trim();
-
-  }catch(e){
-    coachBox.value = "오류: 네트워크/서버 문제";
-  }
-}
+  });
+})();
 </script>
 
 </body>
